--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -7,13 +7,9 @@
         <div class="col-12 col-lg-6 col-xl-7">
           <div class="row justify-content-xl-center">
             <div class="col-12 col-xl-11">
-              <h2 class="h1 mb-3 font-fredoka">Biz Kimiz?</h2>
-              <p class="lead fs-4 text-secondary mb-3 ">Teknoloji Dünyasına Yön Veriyoruz: [Şirket Adı]
-
-                Merhaba Geleceğin Dijital Dünyası!
-                
-                </p>
-              <p class="mb-5">Biz [Şirket Adı], sınırları zorlayan ve sıradanlığı reddeden bir yazılım stüdyosuyuz. Hayal gücünüzü gerçeğe dönüştürmek için buradayız. Dijital dönüşümünüzü desteklemek ve işinizi ileriye taşımak için en yenilikçi çözümleri sunuyoruz.
+              <h1 class="h1 mb-3 text-center font-fredoka">Biz Kimiz?</h1>
+              <p class="lead fs-4 text-secondary mb-4 h3 ">Teknoloji Dünyasına Yön Veriyoruz Merhaba Gelecegin Dijital Dünyası! </p>
+              <p class="mb-5" style="font-size: large; line-height: 25px;">Biz Lear, sınırları zorlayan ve sıradanlığı reddeden bir yazılım stüdyosuyuz. Hayal gücünüzü gerçeğe dönüştürmek için buradayız. Dijital dönüşümünüzü desteklemek ve işinizi ileriye taşımak için en yenilikçi çözümleri sunuyoruz.
                 
                 Web siteleri bizim tutkumuz, kodlar bizim sanatımızdır. Her projede, en son teknolojileri ve en iyi uygulamaları bir araya getirerek, etkileyici ve işlevsel web çözümleri üretiyoruz. Her bir web sitesi, müşterilerimizin benzersiz ihtiyaçlarını ve marka kimliklerini yansıtmak üzere özenle tasarlanır ve geliştirilir.
                 
@@ -21,7 +17,7 @@
                 
                 Çözüm odaklı yaklaşımımız, müşteri memnuniyetini en üst düzeye çıkarmak için tasarlanmıştır. Her adımda sizinle birlikte ilerleyerek, projenizin her aşamasında en iyi sonuçları elde etmenizi sağlıyoruz.
                 
-                [Şirket Adı] ile geleceğinizi şekillendirin ve dijital dünyada fark yaratın. Biz buradayız, sizi hayallerinizin ötesine taşımak için.
+                Lear ile geleceğinizi şekillendirin ve dijital dünyada fark yaratın. Biz buradayız, sizi hayallerinizin ötesine taşımak için.
                 
                 Haydi, birlikte keşfedelim!</p>
               <div class="row gy-4 gy-md-0 gx-xxl-5X">
