--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -12,6 +12,7 @@
   <mat-sidenav-content class="content" [style.margin-left]="sidenavWitdh()">
     <section class="counter-section">
       <div class="row counter">
+        <!-- Takvim -->
         <div class="col-3">
           <div class="date-picker">
             <div class="placement">
@@ -25,7 +26,7 @@
             </div>
           </div>
         </div>
-
+        <!-- Takvim -->
         <div class="col-2 bg-success counter-text">
           <h3>Movies</h3>
           <span class="counter__item">974</span>
