--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="include-navbar font-fredoka">
-    <div id="carouselExampleCaptions" class=" carousel-size carousel slide ">
+<div>
+    <!-- <div id="carouselExampleCaptions" class=" carousel-size carousel slide ">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -7,7 +7,7 @@
       </div>
       <div class="carousel-inner ">
         <div class="carousel-item active">
-          <img src="assets/images/5.jpg" class=" carousel-edit d-block w-100 image " style="height: 70vh;" alt="...">
+          <img src="assets/images/7.jpg" class=" carousel-edit d-block w-100 image " style="height: 70vh;" alt="...">
           <div class="carousel-caption d-none d-md-block font-fredoka">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="carousel-item image cap">
-          <img src="assets/images/1.jpg" class="carousel-edit d-block w-100  image "  style="height: 70vh;" alt="...">
+          <img src="assets/images/2.jpg" class="carousel-edit d-block w-100  image "  style="height: 70vh;" alt="...">
           <div class="carousel-caption d-none d-md-block font-fredoka">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
@@ -37,14 +37,16 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+   
     
     <div class="carousel-text">
       <h1>Lorem ipsum dolor sit amet.</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, hic repellendus unde alias architecto ab nisi eum saepe libero accusantium sint sapiente, quis ducimus officiis dignissimos eius, doloremque temporibus illo. Ut eos dolorum, nemo fugiat possimus deleniti asperiores odit repellendus, consectetur delectus laudantium quos quasi! Itaque recusandae cupiditate illo? Cupiditate?</p>
       <button class="btn btn-outline-light btn-lg mx-3 my-3">Get Started</button>
       <button class="btn btn-outline-light btn-lg mx-3">Learn More</button>
-    </div>
-    
+    </div> -->
+    <img class="homePageImageStyle" src="https://flepix-blog-subjectfiles.s3.amazonaws.com/bg.png" alt="">
     </div>
     
    
@@ -59,6 +61,8 @@
         <!-- Cards -->
         
         <div class="col-9">
-          <app-subject-page/>
+          <router-outlet></router-outlet>
+          <!-- <app-subject-page ></app-subject-page> -->
         </div>
+        
        
