--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,27 +14,27 @@
             </div>
             <!-- Email input -->
             <div class="form-outline mb-4">
-              <label class="form-label" for="form1Example13">Email address</label>
-              <input id="email" type="email" email="email" required ngModel name="email" placeholder="Email Address" class="form-control form-control-lg">
+              <label class="form-label" for="form1Example13">Email Adresi</label>
+              <input id="email" type="email" email="email" required ngModel name="email" placeholder="Email Adresi" class="form-control form-control-lg">
               
             </div>
   
             <!-- Password input -->
             <div class="form-outline mb-4">
-              <label class="form-label" for="form1Example23">Password</label>
-             <input id="password" type="password" password="password" required minlength="8"  ngModel  name="password" placeholder="Password" class="form-control form-control-lg">
+              <label class="form-label" for="form1Example23">Şifre</label>
+             <input id="password" type="password" password="password" required minlength="8"  ngModel  name="password" placeholder="Şifre" class="form-control form-control-lg">
             </div>
   
 
             <!-- Submit button -->
             <div class="d-flex justify-content-around align-items-center mb-4">
-              <button type="submit" class="btn btn-success btn-lg btn-block" [disabled]="loginForm.invalid">Sign in</button>
+              <button type="submit" class="btn btn-success btn-lg btn-block" [disabled]="loginForm.invalid">Giriş Yap</button>
             </div>
-
+            <!--   !Forgot password?
             <div class="divider d-flex align-items-center my-4">
                 <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
               </div>
-              <a routerLink="/register" class="text-help-info">Forgot password?</a>
+              <a routerLink="/register" class="text-help-info">Forgot password?</a> -->
       
           </form>
         </div>
