--- a/src/app/admin-panel/custom-sidenav/ceo/ceo.component.html
+++ b/src/app/admin-panel/custom-sidenav/ceo/ceo.component.html
@@ -80,7 +80,7 @@
   </ng-container>
   
   <ng-container matColumnDef="delete">
-    <th mat-sort-header mat-header-cell *matHeaderCellDef> Sil </th>
+    <th  mat-header-cell *matHeaderCellDef> Sil </th>
     <td mat-cell *matCellDef="let author"><a class="btn btn-outline-danger mx-1" (click)="deleteAuthory(author.id)"><i class="fa-regular fa-trash-can"></i></a></td>
   </ng-container>
 
