--- a/src/app/admin-panel/custom-sidenav/content-editing/content-editing.component.html
+++ b/src/app/admin-panel/custom-sidenav/content-editing/content-editing.component.html
@@ -61,7 +61,7 @@
  
 
   <ng-container matColumnDef="delete">
-    <th mat-sort-header mat-header-cell *matHeaderCellDef> Sil </th>
+    <th  mat-header-cell *matHeaderCellDef> Sil </th>
     <td mat-cell *matCellDef="let category"><a class="btn btn-outline-danger mx-1" (click)="deleteCategory(category.id)"><i class="fa-regular fa-trash-can"></i></a></td>
   </ng-container>
 
