--- a/src/app/admin-panel/custom-sidenav/custom-sidenav.component.html
+++ b/src/app/admin-panel/custom-sidenav/custom-sidenav.component.html
@@ -17,8 +17,8 @@
     />
   </ng-template>
 
-  <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
-    <h2>{{ getFromAuth.firstName }} {{ getFromAuth.lastName }}</h2>
+  <div class="header-text my-1" [class.hide-header-text]="sideNavCollapsed()">
+    <h2 *ngIf="getFromAuth">{{ getFromAuth.firstName }} {{ getFromAuth.lastName }}</h2>
     <p>Full Stack Developer</p>
   </div>
 </div>
