--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,154 +1,146 @@
 <app-navbar></app-navbar>
 
-
 <router-outlet></router-outlet>
 
-  <!-- writer Ekleme Bölümü -->
-  <div>
-    <a routerLink="/author" class="writer-button">
-      <i class="fa-regular fa-pen-to-square"></i>
-    </a>
-  </div>
+<!-- writer Ekleme Bölümü -->
+<div *ngIf="isAuthenticated && isAuthor">
+  <a routerLink="/author" class="writer-button">
+    <i class="fa-regular fa-pen-to-square"></i>
+  </a>
+</div>
 
-  <!-- FOOTER -->
+<!-- FOOTER -->
 
 <footer
-class="text-center text-lg-start text-white font-fredoka"
-style="background-color: #092635"
+  class="text-center text-lg-start text-white font-fredoka"
+  style="background-color: #092635"
 >
-<!-- Section: Social media -->
-<section
-   class="d-flex justify-content-between p-4"
-   style="background-color: #1B4242"
-   >
-<!-- Left -->
-<div class="me-5">
-<span>Get connected with us on social networks:</span>
-</div>
-<!-- Left -->
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-between p-4"
+    style="background-color: #1b4242"
+  >
+    <!-- Left -->
+    <div class="me-5">
+      <span>Bizimle sosyal ağlarda bağlantı kurun:</span>
+    </div>
+    <!-- Left -->
 
-<!-- Right -->
-<div>
-<a href="" class="text-white me-4">
-<i class="fa-brands fa-facebook"></i>
-</a>
-<a href="" class="text-white me-4">
-<i class="fab fa-twitter"></i>
-</a>
-<a href="" class="text-white me-4">
-<i class="fab fa-google"></i>
-</a>
-<a href="" class="text-white me-4">
-<i class="fab fa-instagram"></i>
-</a>
-<a href="" class="text-white me-4">
-<i class="fab fa-linkedin"></i>
-</a>
-<a href="" class="text-white me-4">
-<i class="fab fa-github"></i>
-</a>
-</div>
-<!-- Right -->
-</section>
-<!-- Section: Social media -->
+    <!-- Right -->
+    <div>
+      <a href="" class="text-white me-4">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="" class="text-white me-4">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="text-white me-4">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="text-white me-4">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="text-white me-4">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="text-white me-4">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
 
-<!-- Section: Links  -->
-<section class="">
-<div class="container text-center text-md-start mt-5">
-<!-- Grid row -->
-<div class="row mt-3">
-<!-- Grid column -->
-<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-  <!-- Content -->
-  <h6 class="text-uppercase fw-bold">LEAR</h6>
-  <hr
-      class="mb-4 mt-0 d-inline-block mx-auto"
-      style="width: 60px; background-color: #7c4dff; height: 2px"
-      />
-  <p>
-    Here you can use rows and columns to organize your footer
-    content. Lorem ipsum dolor sit amet, consectetur adipisicing
-    elit.
-  </p>
-</div>
-<!-- Grid column -->
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mx-3">LEAR BLOG</h6>
+          <hr
+            class="mb-4 mt-0 d-inline-block mx-auto"
+            style="width: 60px; background-color: #7c4dff; height: 2px"
+          />
+          <p>
+            Lear'a Hoş Geldiniz!, çeşitli konularda yazılmış zengin içeriklere ev sahipliği yapan bir blog platformudur. Burada, tutkulu yazarlar tarafından kaleme alınmış çeşitli konuları keşfedebilir, ilgi çekici makaleler okuyabilirsiniz.
+          </p>
+          
+        </div>
+        <!-- Grid column -->
 
-<!-- Grid column -->
-<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-  <!-- Links -->
-  <h6 class="text-uppercase fw-bold">Products</h6>
-  <hr
-      class="mb-4 mt-0 d-inline-block mx-auto"
-      style="width: 60px; background-color: #7c4dff; height: 2px"
-      />
-  <p>
-    <a href="#" class="text-white">MDBootstrap</a>
-  </p>
-  <p>
-    <a href="#" class="text-white">MDWordPress</a>
-  </p>
-  <p>
-    <a href="#" class="text-white">BrandFlow</a>
-  </p>
-  <p>
-    <a href="#" class="text-white">Bootstrap Angular</a>
-  </p>
-</div>
-<!-- Grid column -->
+        <!-- Grid column 
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          Links --> <!--
+          <h6 class="text-uppercase fw-bold">Products</h6>
+          <hr
+            class="mb-4 mt-0 d-inline-block mx-auto"
+            style="width: 60px; background-color: #7c4dff; height: 2px"
+          />
+          <p>
+            <a href="#" class="text-white">MDBootstrap</a>
+          </p>
+          <p>
+            <a href="#" class="text-white">MDWordPress</a>
+          </p>
+          <p>
+            <a href="#" class="text-white">BrandFlow</a>
+          </p>
+          <p>
+            <a href="#" class="text-white">Bootstrap Angular</a>
+          </p>
+        </div>
+        <!-- Grid column -->
 
-<!-- Grid column -->
-<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-  <!-- Links -->
-  <h6 class="text-uppercase fw-bold">Useful links</h6>
-  <hr
-      class="mb-4 mt-0 d-inline-block mx-auto"
-      style="width: 60px; background-color: #7c4dff; height: 2px"
-      />
-  <p>
-    <a href="#!" class="text-white">Your Account</a>
-  </p>
-  <p>
-    <a href="#!" class="text-white">Become an Affiliate</a>
-  </p>
-  <p>
-    <a href="#!" class="text-white">Shipping Rates</a>
-  </p>
-  <p>
-    <a href="#!" class="text-white">Help</a>
-  </p>
-</div>
-<!-- Grid column -->
+        <!-- Grid column -->
+        <!-- <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          Links --> <!-- 
+          <h6 class="text-uppercase fw-bold">Useful links</h6>
+          <hr
+            class="mb-4 mt-0 d-inline-block mx-auto"
+            style="width: 60px; background-color: #7c4dff; height: 2px"
+          />
+          <p>
+            <a href="#!" class="text-white">Your Account</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Become an Affiliate</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Shipping Rates</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Help</a>
+          </p>
+        </div> -->
+        <!-- Grid column -->
 
-<!-- Grid column -->
-<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-  <!-- Links -->
-  <h6 class="text-uppercase fw-bold">Contact</h6>
-  <hr
-      class="mb-4 mt-0 d-inline-block mx-auto"
-      style="width: 60px; background-color: #7c4dff; height: 2px"
-      />
-  <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-  <p><i class="fas fa-envelope mr-3"></i> infoexample.com</p>
-  <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-  <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-</div>
-<!-- Grid column -->
-</div>
-<!-- Grid row -->
-</div>
-</section>
-<!-- Section: Links  -->
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class=" mx-3 text-uppercase fw-bold"> Bizimle İletişime Geçin</h6>
+          <hr
+            class="mb-4 mt-0 d-inline-block mx-auto"
+            style="width: 150px; background-color: #7c4dff; height: 2px"
+          />
+          <p><i class="fas fa-home mr-3"></i> Türkiye</p>
+          <p><i class="fas fa-envelope mr-3"></i> flepixofficial&#64;gmail.com</p>
+          <p><i class="fa-solid fa-circle-info"></i><a routerLink="/contactus" style="text-decoration: none; color: white;"> Bizimle İletişime Geçin</a></p>
+          <p><i class="fa-solid fa-question"></i><a routerLink="/aboutus" style="text-decoration: none; color: white;"> Hakkımızda</a></p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
 
-<!-- Copyright -->
-<div
-class="text-center p-3"
-style="background-color: rgba(0, 0, 0, 0.2)"
->
-© 2024 Copyright:
-<a class="text-white" href="#"
->Lear.com</a
->
-</div>
-<!-- Copyright -->
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2024 Copyright:
+    <a class="text-white" href="#">LEAR BLOG.com</a>
+  </div>
+  <!-- Copyright -->
 </footer>
-  
