--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,5 +1,16 @@
-<ul class="list" *ngFor="let category of categories">
-  <li class="list-item">
-    <a class="list-button" href="#">{{ category.name }}</a>
-  </li>
-</ul>
+<div class="container">
+  <h1 class="mt-5 mb-4">Kategoriler</h1>
+  <div class="row">
+    <div class="col-md-12">
+
+      <div class="list-group">
+        <a class="list-group-item list-group-item-action my-1" (click)="selectCategory()" [class.active]="displayAll" routerLink="/subjects"  class="list-group-item list-group-item-action my-1">Tüm Haberler</a> 
+
+      </div>
+    
+      <div class="list-group" *ngFor="let category of categories">
+        <a (click)="selectCategory(category)" [class.active]="category == selectedCategory" routerLink="subjects/category/{{category.id}}" class="list-group-item list-group-item-action my-1">{{ category.name }}</a> 
+      </div>
+    </div>
+  </div>
+</div>
