--- a/src/app/image/image.component.css
+++ b/src/app/image/image.component.css
@@ -13,23 +13,23 @@ input[type="file"] {
     display: inline-block;
     border-radius: 10px;
     padding: 5px;
-    margin-right: 50px;
+    left: 50px;
+    top: 275px;
     cursor: pointer;
     position: absolute ;
   }
 
 /*?Upload Image*/
+
 .uploadImage{
-    padding: 5px 15px;
-    color: white;
-    margin-left: 50px;
-    border: 1px solid #092635;
-    background-color: #092635;
-    position: relative;
-    top: 320px;
-    border-radius: 15px;
-    margin-top: 5px;
-    right: 25px;
+  padding: 5px 15px;
+  color: white;
+  border: 1px solid #092635;
+  background-color: #092635;
+  position: absolute;
+  top: 270px;
+  border-radius: 15px;
+  margin-top: 5px;
 }
 
 .uploadImage:active{
