--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -1,7 +1,7 @@
 <div class="fileUpload">
 
-<label for="file-upload" class="custom-file-upload" ><i class="fa-solid fa-user-pen"></i> Profili Düzenle</label>
+<label for="file-upload" class="custom-file-upload" ><i class="fa-solid fa-user-pen"></i> Fotografı Düzenle</label>
 <input id="file-upload" type="file" (change)="onFileSelected($event)"/>
-<button class="uploadImage pastel-dark-low" (click)="uploadImage()"><i class="fa-solid fa-floppy-disk "></i> Kaydet</button> 
+<button class="uploadImage pastel-dark-low mx-5" (click)="uploadImage()"><i class="fa-solid fa-floppy-disk "></i> Kaydet</button> 
 </div>
 
