--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,10 @@
   font-family: "Fredoka", sans-serif;
 }
 
+.font-fredoka-important{
+  font-family: "Fredoka", sans-serif !important;
+}
+
 .list-item a {
   text-decoration: none;
 }
