--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,7 +62,7 @@
           <h6 class="text-uppercase fw-bold mx-3">LEAR BLOG</h6>
           <hr
             class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px; background-color: #7c4dff; height: 2px"
+            style="width: 85px; background-color: #7c4dff; height: 2px"
           />
           <p>
             Lear'a Hoş Geldiniz!, çeşitli konularda yazılmış zengin içeriklere ev sahipliği yapan bir blog platformudur. Burada, tutkulu yazarlar tarafından kaleme alınmış çeşitli konuları keşfedebilir, ilgi çekici makaleler okuyabilirsiniz.
@@ -92,7 +92,7 @@
             <a href="#" class="text-white">Bootstrap Angular</a>
           </p>
         </div>
-        <!-- Grid column -->
+        Grid column -->
 
         <!-- Grid column -->
         <!-- <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -120,7 +120,7 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class=" mx-3 text-uppercase fw-bold"> Bizimle İletişime Geçin</h6>
+          <h6 class=" mx-3 text-uppercase fw-bold"> Bizimle iletişime Geçin</h6>
           <hr
             class="mb-4 mt-0 d-inline-block mx-auto"
             style="width: 150px; background-color: #7c4dff; height: 2px"
@@ -140,7 +140,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2024 Copyright:
-    <a class="text-white" href="#">LEAR BLOG.com</a>
+    <a class="text-white" routerLink="/">LEARBLOG.com</a>
   </div>
   <!-- Copyright -->
 </footer>
