--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-palet font-fredoka">
     <div class="container">
-      <a class="navbar-brand" href="#"><img class="mx-2" style="width: 50px; height: 50px; border-radius: 50%;" src="assets/images/logo.jpg" alt="">LEAR BLOG</a>
+      <a class="navbar-brand" routerLink="/"><img class="mx-2" style="width: 50px; height: 50px; border-radius: 50%;" src="assets/images/logo.jpg" alt="">LEAR BLOG</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
